# OneBrown

./: .gitignore  README.md
iOS/: UserCell.h  UserCell.m
iOS/OneBrown/: AddSocialNetworksViewController.h  AddSocialNetworksViewController.m  AppDelegate.h  AppDelegate.m  CAPopupWindow.m  FindViewController.h  FindViewController.m  LogInViewController.h  LogInViewController.m  LoginLogic.h  LoginLogic.m  NetworkManager.h  NetworkManager.m  OneBrown-Info.plist  OneBrownCommon.h  OneBrownCommon.m  ProfileViewController.h  ProfileViewController.m  ResizedTextField.h  ResizedTextField.m  SignInViewController.h  SignInViewController.m  SocialNetworkViewController.h  SocialNetworkViewController.m  TabController.h  TabController.m  UserManager.h  UserManager.m  UserProfileViewController.h  UserProfileViewController.m  WelcomeViewController.h  WelcomeViewController.m  main.m
iOS/OneBrown.xcodeproj/: project.pbxproj
iOS/OneBrown.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
iOS/OneBrown.xcodeproj/project.xcworkspace/xcshareddata/: OneBrown.xccheckout
iOS/OneBrown/Base.lproj/: Main.storyboard  Main_1.storyboard
iOS/OneBrown/Images.xcassets/AppIcon.appiconset/: Contents.json
iOS/OneBrown/Images.xcassets/Ben Murphy.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/BrownBuildingBlurred.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/BrownDayBlurred.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/BrownGateMistBlurred.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/BrownGreenBlurred.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/BrownTreeBlurred.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/IconSearch.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/SettingsIcon.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/SettingsIconLine.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/Valentin Perez.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/addStuff.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/backArrow.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/background.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/clearImage.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/erik.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/facebookIcon.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/findPeople.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/followus.imageset/: Contents.json
iOS/OneBrown/Images.xcassets/instagram.imageset/: Contents.json
iOS/OneBrownTests/: OneBrownTests-Info.plist
java_server/: startServer.sh
java_server/src/: Base64.java  Client.java  Database.java  Main.java  Network.java  Utility.java
server/: Makefile  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  serv.sh
server/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
server/iOS/OneBrown/: AppDelegate.h  AppDelegate.m  LoginLogic.m  SignInViewController.h  SignInViewController.m
server/iOS/OneBrown.xcodeproj/: project.pbxproj
server/iOS/OneBrown/Base.lproj/: Main.storyboard
server/iOS/OneBrownTests/: OneBrownTests.m
server/src/: Client.java  Database.java  Login.java  Main.java  Network.java  Utility.java  main.cpp  main.h  open.sh
server/src/Utilities/: Utility.cpp  Utility.h
server/src/client/: Cache.cpp  Cache.h  Client.cpp  Client.h  ClientAuth.cpp  ClientAuth.h  ClientCollector.cpp  ClientCollector.h  ClientConnector.cpp  ClientConnector.h  ClientResponder.cpp  ClientResponder.h  ClientRunner.cpp  ClientRunner.h  ClientWatchdog.cpp  ClientWatchdog.h  Server.cpp  Server.h
server/src/database/: Database.cpp  Database.h
server/src/email/: Email.cpp  Email.h
server/src/network/: Email.cpp  Email.h  Network.cpp  Network.h
server/src/runner/: Runner.cpp  Runner.h
server/src/utilities/: Strings.cpp  Strings.h  Utility.cpp  Utility.h
server/src/utility/: Utility.cpp  Utility.h
server_old/autom4te.cache/: output.1
server_old/src/: main.cpp
server_old/src/client/: Client.cpp  ClientCollector.cpp
server_old/src/email/: Email.h
server_old/src/network/: Network.cpp  Network.h
(+20 files in other folders)
