AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

bin_PROGRAMS = out
out_SOURCES = src/main.h src/main.cpp src/utilities/Strings.h src/utilities/Strings.cpp src/client/Client.h src/client/Client.cpp src/network/Network.cpp src/network/Network.h src/database/Database.h src/database/Database.cpp
