AUTOMAKE_OPTIONS = subdir-objects
ACLOCAL_AMFLAGS = ${ACLOCAL_FLAGS}

bin_PROGRAMS = out
out_SOURCES = src/main.h src/main.cpp src/client/Cache.h src/client/Cache.cpp src/client/ClientCollector.h src/client/ClientCollector.cpp src/client/Client.h src/client/Client.cpp src/network/Network.cpp src/network/Network.h src/database/Database.h src/database/Database.cpp src/utilities/Utility.h src/utilities/Utility.cpp src/email/Email.h src/email/Email.cpp

